--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,7 +1,8 @@
 
 .box {
   width: 270px;
-  margin: 0px 0px 20px 20px;
+  margin: 5px 0px 20px 20px;
+  cursor: pointer;
 
   -webkit-transition: all 0.5s ease-in-out;
   	 -moz-transition: all 0.5s ease-in-out;
@@ -12,7 +13,7 @@
   opacity: 0.60;
 
 }
-.box img{
+#sets img{
   padding: 0;
   border: solid 3px white;
   padding: 0;
@@ -26,7 +27,7 @@
 	 		-moz-box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
 	 				 box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
 }
-.box:hover {
+#sets img:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 	 -webkit-box-shadow: 0px 0px 5px rgba(5,50,100,0.8);
