--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4,10 +4,10 @@
   margin: 5px 0px 20px 20px;
   cursor: pointer;
 
-  -webkit-transition: all 0.5s ease-in-out;
-  	 -moz-transition: all 0.5s ease-in-out;
-  	 	 -o-transition: all 0.5s ease-in-out;
-  				transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  	 -moz-transition: all 0.4s ease-in-out;
+  	 	 -o-transition: all 0.4s ease-in-out;
+  				transition: all 0.4s ease-in-out;
 
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.60;
@@ -16,8 +16,6 @@
 
 .drop-shadow {
    position:relative;
-   -moz-border-radius: 0 0 120px 120px / 0 0 10px 10px;
-   border-radius: 0 0 120px 120px / 0 0 10px 10px;
 }
 
 .drop-shadow:before,
@@ -26,26 +24,27 @@
    position:absolute;
    z-index:-1;
    bottom:15px;
-   left:10px;
+   left:20px;
    width:50%;
    height:20%;
    -webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.3);
    -moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.3);
    box-shadow:0 15px 10px rgba(0, 0, 0, 0.3);
-   -webkit-transform:rotate(-3deg);
-   -moz-transform:rotate(-3deg);
-   -o-transform:rotate(-3deg);
-   transform:rotate(-3deg);
+   -webkit-transform:rotate(-4deg);
+   -moz-transform:rotate(-4deg);
+   -o-transform:rotate(-4deg);
+   transform:rotate(-4deg);
 }
 
 .drop-shadow:after{
-   right:10px;
+   right:20px;
    left:auto;
-   -webkit-transform:rotate(3deg);
-   -moz-transform:rotate(3deg);
-   -o-transform:rotate(3deg);
-   transform:rotate(3deg);
+   -webkit-transform:rotate(4deg);
+   -moz-transform:rotate(4deg);
+   -o-transform:rotate(4deg);
+   transform:rotate(4deg);
  }
+
 
 #sets img{
   padding: 0;
@@ -57,9 +56,9 @@
   				border-radius: 3px;
 
 	
-	 -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
-	 		-moz-box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
-	 				 box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
+	 -webkit-box-shadow: 0px 0px 1px rgb(0,0,0);
+	 		-moz-box-shadow: 0px 0px 1px rgb(0,0,0);
+	 				 box-shadow: 0px 0px 1px rgb(0,0,0);
 }
 #sets img:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
