--- a/home/sass/roger.scss
+++ b/home/sass/roger.scss
@@ -3,19 +3,28 @@
 					box-shadow: $shadow;
 }
 
+@mixin transition($transition...){
+	-webkit-transition: $transition;
+	-moz-transition: $transition;
+	-o-transition: $transition;
+}
+
 
 .gallery{
+    display: block;
 	height: 250px;
 	overflow: hidden;
-
-	-webkit-transition: all 0.6s ease-out;
-	-moz-transition: all 0.6s ease-out;
-	-o-transition: all 0.6s ease-out;
 	transition: all 0.6s ease-out;
+	border: solid 4px rgba(255,255,255,0.8);
+	opacity: 0.45;
+	@include transition(all 0.6s ease-out);
+	@include shadow(0 1px 4px rgba(0, 0, 0, 0.3));
 	&:hover{
-		//background-position: 0 100%;
-		height: 550px;
+		@include shadow(0 1px 8px rgba(180, 0, 50, 0.45));
+		height: 750px;
 		cursor: pointer;
+		border-radius: 20px;
+		opacity: 1;
 	}
 	border-radius: 15px 15px 0 0;
 	h1{
@@ -25,8 +34,11 @@
 		padding: 10px 5%; 
 		position: absolute;
 		margin-top: 20px;
-		z-index: 99;
 		@include shadow(inset 5px 5px 0px 0px rgba(0, 0, 0, 0.3),5px 5px 0px 0px rgba(50, 0, 25, 0.3),10px 10px 0px 0px rgba(255, 205, 205, 0.3));
 	}
-		/* style */
+		img{z-index: -1}
+}
+
+.contain-to-grid{
+	z-index: 200;
 }
