--- a/home/stylesheets/roger.css
+++ b/home/stylesheets/roger.css
@@ -1,20 +1,28 @@
-/* line 7, ../sass/roger.scss */
+/* line 13, ../sass/roger.scss */
 .gallery {
+  display: block;
   height: 250px;
   overflow: hidden;
+  transition: all 0.6s ease-out;
+  border: solid 4px rgba(255, 255, 255, 0.8);
+  opacity: 0.45;
   -webkit-transition: all 0.6s ease-out;
   -moz-transition: all 0.6s ease-out;
   -o-transition: all 0.6s ease-out;
-  transition: all 0.6s ease-out;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   border-radius: 15px 15px 0 0;
-  /* style */
 }
-/* line 15, ../sass/roger.scss */
+/* line 22, ../sass/roger.scss */
 .gallery:hover {
-  height: 550px;
+  -webkit-box-shadow: 0 1px 8px rgba(180, 0, 50, 0.45);
+  box-shadow: 0 1px 8px rgba(180, 0, 50, 0.45);
+  height: 750px;
   cursor: pointer;
+  border-radius: 20px;
+  opacity: 1;
 }
-/* line 21, ../sass/roger.scss */
+/* line 30, ../sass/roger.scss */
 .gallery h1 {
   background: rgba(150, 20, 70, 0.7);
   color: white;
@@ -22,7 +30,15 @@
   padding: 10px 5%;
   position: absolute;
   margin-top: 20px;
-  z-index: 99;
   -webkit-box-shadow: inset 5px 5px 0px 0px rgba(0, 0, 0, 0.3), 5px 5px 0px 0px rgba(50, 0, 25, 0.3), 10px 10px 0px 0px rgba(255, 205, 205, 0.3);
   box-shadow: inset 5px 5px 0px 0px rgba(0, 0, 0, 0.3), 5px 5px 0px 0px rgba(50, 0, 25, 0.3), 10px 10px 0px 0px rgba(255, 205, 205, 0.3);
+}
+/* line 39, ../sass/roger.scss */
+.gallery img {
+  z-index: -1;
+}
+
+/* line 42, ../sass/roger.scss */
+.contain-to-grid {
+  z-index: 200;
 }
