--- a/home/stylesheets/app.css
+++ b/home/stylesheets/app.css
@@ -44,6 +44,26 @@
   z-index: 200;
 }
 
+@media all and (max-width: 768px) and (min-width: 480px) {
+  /* line 47, ../sass/roger.scss */
+  .gallery {
+    height: 150px;
+  }
+  /* line 49, ../sass/roger.scss */
+  .gallery:hover {
+    height: 555px;
+  }
+}
+@media all and (max-width: 480px) {
+  /* line 56, ../sass/roger.scss */
+  .gallery {
+    height: 100px;
+  }
+  /* line 58, ../sass/roger.scss */
+  .gallery:hover {
+    height: 300px;
+  }
+}
 /* line 4, ../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.1.1/scss/foundation/components/_global.scss */
 *,
 *:before,
