--- a/home/stylesheets/app.css
+++ b/home/stylesheets/app.css
@@ -53,15 +53,23 @@
   .gallery:hover {
     height: 555px;
   }
+  /* line 52, ../sass/roger.scss */
+  .gallery h1 {
+    font-size: 160%;
+  }
 }
 @media all and (max-width: 480px) {
-  /* line 56, ../sass/roger.scss */
+  /* line 59, ../sass/roger.scss */
   .gallery {
-    height: 100px;
+    height: 180px;
   }
-  /* line 58, ../sass/roger.scss */
+  /* line 61, ../sass/roger.scss */
   .gallery:hover {
     height: 300px;
+  }
+  /* line 64, ../sass/roger.scss */
+  .gallery h1 {
+    font-size: 120%;
   }
 }
 /* line 4, ../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.1.1/scss/foundation/components/_global.scss */
