--- a/home/stylesheets/roger.css
+++ b/home/stylesheets/roger.css
@@ -52,14 +52,22 @@
   .gallery:hover {
     height: 555px;
   }
+  /* line 52, ../sass/roger.scss */
+  .gallery h1 {
+    font-size: 160%;
+  }
 }
 @media all and (max-width: 480px) {
-  /* line 56, ../sass/roger.scss */
+  /* line 59, ../sass/roger.scss */
   .gallery {
-    height: 100px;
+    height: 180px;
   }
-  /* line 58, ../sass/roger.scss */
+  /* line 61, ../sass/roger.scss */
   .gallery:hover {
     height: 300px;
+  }
+  /* line 64, ../sass/roger.scss */
+  .gallery h1 {
+    font-size: 120%;
   }
 }
