nav bar + glise
agregando un poco de estilos al nav bar e incluyendo el glise (esta
listo)

--- a/home/sass/app.scss
+++ b/home/sass/app.scss
@@ -1,6 +1,7 @@
 // Global Foundation Settings
 @import "settings";
 @import "roger";
+@import "glise";
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
