--- a/sass/roger.scss
+++ b/sass/roger.scss
@@ -92,7 +92,7 @@ body{
 		margin-top: 20px;
 		@include shadow(inset 5px 5px 0px 0px rgba(0, 0, 0, 0.3),5px 5px 0px 0px rgba(50, 0, 25, 0.3),10px 10px 0px 0px rgba(255, 205, 205, 0.3));
 	}
-		img{z-index: -1;display: block;}
+		img{display: block;}
 }
 
 .my-nav{
